modifiy app.config files and add PPR one

--- a/Application/App.config
+++ b/Application/App.config
@@ -46,8 +46,8 @@
     <add key="Trigram_PI-DA-RCU-AR" value="RCU" />
     <add key="Trigram_AREPRCU-APPI01" value="RCU" />
     <!--TEP Bolivia-->
-    <add key="Trigram_BOEPSRZ-APPI01" value="SRZ" />
-    <add key="Trigram_PI-DA-SRZ-BO" value="SRZ" />
+    <add key="Trigram_BOEPSRZ-APPI01" value="INC" />
+    <add key="Trigram_PI-DA-SRZ-BO" value="INC" />
     <!--TEP Brazil-->
     <add key="Trigram_PI-DA-RIO-BR" value="RIO" />
     <add key="Trigram_BREPRIO-APPI01" value="RIO" />
