--- a/Application/App.config
+++ b/Application/App.config
@@ -10,9 +10,9 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
   </startup>
   <appSettings>
-    <add key="OutputPath" value="C:\PIReplicationTool\Output\" />
-    <add key="InputPath" value="C:\PIReplicationTool\Input\" />
-    <add key="LogPath" value="C:\PIReplicationTool\Output\Log" />
+    <add key="OutputPath" value="D:\PI\Applications\PI-Replication-Tool\Output\" />
+    <add key="InputPath" value="D:\PI\Applications\PI-Replication-Tool\Input\" />
+    <add key="LogPath" value="D:\PI\Applications\PI-Replication-Tool\Output\Log" />
     <add key="InputFileName" value="input.txt" />
     <add key="OutputFileName_SourceTags" value="SourceTags" />
     <add key="OutputFileName_TargetTags" value="TargetTags" />
@@ -34,6 +34,8 @@
     <add key="Trigram_AOEPDAL-APPID02" value="DAL" />
     <add key="Trigram_PI-DA-CLV_AO" value="CLV" />
     <add key="Trigram_AOEPCLV-APPIC02" value="CLV" />
+    <add key="Trigram_PI-DA-AO-PPR" value="LAD_PPR" />
+    <add key="Trigram_OPEPPA-WRPIAO01" value="LAD_PPR" />
     <!--TEP Austral-->
     <add key="Trigram_PI-DA-AGU-AR" value="AGU" />
     <add key="Trigram_AREPAGU-APPI01" value="AGU" />
@@ -45,6 +47,8 @@
     <add key="Trigram_AREPLLY-APPI01" value="LLY" />
     <add key="Trigram_PI-DA-RCU-AR" value="RCU" />
     <add key="Trigram_AREPRCU-APPI01" value="RCU" />
+    <add key="Trigram_PI-DA-AR-PPR" value="BUE_PPR" />
+    <add key="Trigram_OPEPPA-WRPIAR01" value="BUE_PPR" />
     <!--TEP Bolivia-->
     <add key="Trigram_BOEPSRZ-APPI01" value="INC" />
     <add key="Trigram_PI-DA-SRZ-BO" value="INC" />
@@ -53,32 +57,36 @@
     <add key="Trigram_BREPRIO-APPI01" value="RIO" />
     <add key="Trigram_PI-DA-LAP-BR" value="LAP" />
     <add key="Trigram_BREPLAP-APPI01" value="LAP" />
+    <add key="Trigram_PI-DA-BR-PPR" value="RIO_PPR" />
+    <add key="Trigram_OPEPPA-WRPIBR01" value="RIO_PPR" />
     <!--TEP Brunei-->
     <add key="Trigram_PI-DA-BNP-BR" value="BNP" />
     <add key="Trigram_BNEPLUM-AP05" value="BNP" />
     <!--TEP Congo-->
     <add key="Trigram_PI-DA-PNR-CG" value="PNR" />
     <add key="Trigram_CGEPBIN-APPI04" value="PNR" />
+    <add key="Trigram_PI-DA-CG-PPR" value="PNR_PPR" />
+    <add key="Trigram_OPEPPA-WRPICG01" value="PNR_PPR" />
     <!--TEP Danemark-->
     <add key="Trigram_PI-DA-EBJ-DK" value="EBJ" />
     <add key="Trigram_DKEPEBJ-APPIHS1" value="EBJ" />
     <add key="Trigram_DKEPEBJ-APPIHS2" value="EBJ" />
+    <add key="Trigram_PI-DA-DK-PPR" value="EBJ_PPR" />
+    <add key="Trigram_OPEPPA-WRPIDK01" value="EBJ_PPR" />
     <!--TEP Gabon-->
     <add key="Trigram_PI-DA-POG-GA" value="POG" />
     <add key="Trigram_GAEPPOG-PIS01" value="POG" />
+    <add key="Trigram_PI-DA-GB-PPR" value="POG_PPR" />
+    <add key="Trigram_OPEPPA-WRPIGB01" value="POG_PPR" />
     <!--TEP Italy-->
     <add key="Trigram_PI-DA-COR-IT" value="COR" />
     <add key="Trigram_ITEPCOR-AP03" value="COR" />
-    <!--TEP Myanmar-->
-    <add key="Trigram_PI-DA-RNG-MM" value="RGN" />
-    <add key="Trigram_MMEPRGN-APPI01" value="RGN" />
-    <add key="Trigram_PI-DA-YDN-MM" value="YDN" />
-    <add key="Trigram_MMEPYDN-APPI01" value="YDN" />
     <!--TEP Netherland-->
     <add key="Trigram_NL-DHG-PI" value="DHG" />
     <add key="Trigram_NLEPDHG-PI01" value="DHG" />
     <add key="Trigram_NLEPDHG-PI02" value="DHG" />
-    <add key="Tag_Prefixe_DHG" value="NL_" />
+    <add key="Trigram_PI-DA-NL-PPR" value="DHG_PPR" />
+    <add key="Trigram_OPEPPA-WRPINL01" value="DHG_PPR" />
     <!--TEP Nigeria DW-->
     <add key="Trigram_PI-DA-AKP-NG" value="AKP" />
     <add key="Trigram_AKPO-OPS-COLLECTIVE2" value="AKP" />
@@ -88,6 +96,8 @@
     <add key="Trigram_NGEPEGN-APPIS01" value="EGN" />
     <add key="Trigram_PI-DA-LOS-NG" value="LOS" />
     <add key="Trigram_NGEPLOS-APPIS01" value="LOS" />
+    <add key="Trigram_PI-DA-LOG-NG-PPR" value="LOS_PPR" />
+    <add key="Trigram_OPEPPA-WRPING01" value="LOS_PPR" />
     <!--TEP Nigeria JV-->
     <add key="Trigram_PI-DA-AMQ-NG" value="AMQ" />
     <add key="Trigram_NGEPAMQ-APPI01" value="AMQ" />
@@ -95,6 +105,8 @@
     <add key="Trigram_NGEPOBG-AP02" value="OBG" />
     <add key="Trigram_PI-DA-PHC-NG" value="PHC" />
     <add key="Trigram_NGEPPHC-APPI01" value="PHC" />
+    <add key="Trigram_PI-DA-PHC-NG-PPR" value="PHC_PPR" />
+    <add key="Trigram_OPEPPA-WRPING02" value="PHC_PPR" />
     <!--TEP Norvege-->
     <add key="Trigram_PI-DA-SVG-NO" value="SVG" />
     <add key="Trigram_NOEPSVG-APPI02" value="SVG" />
@@ -102,10 +114,15 @@
     <add key="Trigram_PI-DA-DOH-QA" value="DOH" />
     <add key="Trigram_QAEPDOH-WPPI01" value="DOH" />
     <add key="Trigram_QAEPTRC-WPPI02" value="DOH" />
+    <add key="Trigram_PI-DA-QA-PPR" value="DOH_PPR" />
+    <add key="Trigram_OPEPPA-WRPIQA01" value="DOH_PPR" />
     <!--TEP United Kingdom-->
-    <add key="Trigram_UK-ABZ-MIS" value="ABZ" />
-    <add key="Trigram_GBEPABZ-APMIS01" value="ABZ" />
-    <add key="Trigram_GBEPABZ-APMIS02" value="ABZ" />
+    <add key="Trigram_PI-DA-ABZ-GB" value="ABZ" />
+    <add key="Trigram_GBEPABZ-APMIS03" value="ABZ" />
+    <add key="Trigram_GBEPABZ-APMIS04" value="ABZ" />
+    <add key="Trigram_OPEPPA-WRPIGB01" value="ABZ_PPR" />
+    <add key="Trigram_PI-DA-GB-PPR" value="ABZ_PPR" />
+    
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
   <system.web>
