--- a/Application/App.config
+++ b/Application/App.config
@@ -12,7 +12,7 @@
   <appSettings>
     <add key="OutputPath" value="D:\PI\Applications\PI-Replication-Tool\Output\" />
     <add key="InputPath" value="D:\PI\Applications\PI-Replication-Tool\Input\" />
-    <add key="LogPath" value="D:\PI\Applications\PI-Replication-Tool\Output\Log" />
+    <add key="LogPath" value="D:\PI\Applications\PI-Replication-Tool\Log\" />
     <add key="InputFileName" value="input.txt" />
     <add key="OutputFileName_SourceTags" value="SourceTags" />
     <add key="OutputFileName_TargetTags" value="TargetTags" />
