--- a/Application/Nlog.config
+++ b/Application/Nlog.config
@@ -33,7 +33,7 @@
 		<target
 		  xsi:type="File"
 		  name="logfile"
-		  fileName="${appsetting:item=LogPath:default=D:\PI\Applications\PI-Replication-Tool-v1.0.0\Logs\}${shortdate}_logfile.txt"
+			fileName="D:\PI\Applications\PI-Replication-Tool\Log\${shortdate}_logfile.txt"
 		  layout="${longdate}|${level:uppercase=true}|${logger}|${threadid}|${message}" /> <!-- |${exception:format=tostring} -->
 
 		<!-- RichTextBox to display logs in WPF application -->
