debugging PIAttributeUpdateManager.LoadTagsAttributes()

--- a/Application/Nlog.config
+++ b/Application/Nlog.config
@@ -52,6 +52,6 @@
 
   <rules>
     <!--<logger name="*" minlevel="Debug" writeTo="logfile" final="true" />-->
-    <logger name="*" minlevel="Info" writeTo="logfile" />
+    <logger name="*" minlevel="Debug" writeTo="logfile" />
   </rules>
 </nlog>
