Correctif du point source pour réplication HQ PROD vers HQ PPR

--- a/Application/App.config
+++ b/Application/App.config
@@ -22,7 +22,7 @@
     <add key="DigitalMaxPointCountAllowed" value="10000" />
     <!--TRIGRAM KEYS-->
     <!--TEP Pau-->
-    <add key="Trigram_PI-CENTER-HQ" value="" />
+    <add key="Trigram_PI-CENTER-HQ" value="HQ" />
     <!--TEP Angola-->
     <add key="Trigram_PI-DA-LAD-AO" value="LAD" />
     <add key="Trigram_AOEPTTA-APPIL01" value="LAD" />
