--- a/Application/App.config
+++ b/Application/App.config
@@ -122,6 +122,7 @@
     <add key="Trigram_GBEPABZ-APMIS04" value="ABZ" />
     <add key="Trigram_OPEPPA-WRPIGB01" value="ABZ_PPR" />
     <add key="Trigram_PI-DA-GB-PPR" value="ABZ_PPR" />
+	<add key="Trigram_GBEPGRY-APMIS01" value="GRY" />
     
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
