Update deployement list

--- a/Application/App.config
+++ b/Application/App.config
@@ -32,8 +32,12 @@
     <add key="Trigram_AOEPGIR-APPIG01" value="GIR" />
     <add key="Trigram_PI-DA-DAL-AO" value="DAL" />
     <add key="Trigram_AOEPDAL-APPID02" value="DAL" />
-    <add key="Trigram_PI-DA-CLV_AO" value="CLV" />
+    <add key="Trigram_PI-DA-CLV-AO" value="CLV" />
     <add key="Trigram_AOEPCLV-APPIC02" value="CLV" />
+	<add key="Trigram_PI-DA-KAN-AO" value="KAN" />
+    <add key="Trigram_AOEPKAN-APPIN01" value="KAN" />
+	<add key="Trigram_PI-DA-KAS-AO" value="KAS" />
+    <add key="Trigram_AOEPKAS-APPIS01" value="KAS" />
     <add key="Trigram_PI-DA-AO-PPR" value="LAD_PPR" />
     <add key="Trigram_OPEPPA-WRPIAO01" value="LAD_PPR" />
     <!--TEP Austral-->
